--- a/package.json
+++ b/package.json
@@ -4,27 +4,26 @@
   "version": "1.0.0",
   "description": "Display, add, update and remove tags",
   "scripts": {
-    "build": "grunt release",
-    "emit": "tsc",
-    "deploy": " npm run updateProject && npm run deployApp",
-    "deployApp": "node ./node_modules/mendix-widget-build-script/dist/DeployMxApp.js",
-    "deployAndTest": "npm run deploy && npm run test:e2e",
-    "lint": "tslint -c tslint.json '**/*.ts' --exclude '**/node_modules/**'",
-    "lint:fix": "npm run lint -- --fix",
-    "pretest": "tsc && npm run lint && npm run build",
     "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
+    "emit": "tsc",
+    "pretest": "tsc && npm run lint && npm run build",
     "test": "npm run test:unit && npm run test:conditional",
     "test:conditional": "node ./node_modules/mendix-widget-build-script/dist/CheckPullRequestFromFork.js && echo 'Skip tests on forked pull request' || npm run deployAndTest",
     "test:dev": "karma start",
     "test:unit": "karma start --single-run --codeCoverage && node tests/remap.js",
     "test:e2e": "tsc -p ./tests/e2e/tsconfig.json && wdio ./tests/e2e/wdio.conf.js",
     "test:e2e:dev": "tsc -p ./tests/e2e/tsconfig.json && set DEBUG=true&& wdio ./tests/e2e/wdio.conf.js",
-    "updateProject": "node ./node_modules/mendix-widget-build-script/dist/UpdateMxProject.js"
+    "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'",
+    "lint:fix": "npm run lint -- --fix",
+    "deploy": " npm run updateProject && npm run deployApp",
+    "build": "grunt release",
+    "updateProject": "node ./node_modules/mendix-widget-build-script/dist/UpdateMxProject.js",
+    "deployApp": "node ./node_modules/mendix-widget-build-script/dist/DeployMxApp.js",
+    "deployAndTest": "npm run deploy && npm run test:e2e"
   },
   "pre-commit": [
     "emit",
-    "lint",
-    "test"
+    "lint"
   ],
   "repository": {
     "type": "git",
@@ -37,12 +36,13 @@
   "devDependencies": {
     "@types/classnames": "^2.2.3",
     "@types/core-js": "^0.9.42",
-    "@types/enzyme": "^2.8.6",
-    "@types/jasmine": "^2.5.53",
-    "@types/karma": "^0.13.36",
-    "@types/react": "^16.0.2",
+    "@types/enzyme": "^3.1.10",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
+    "@types/jasmine": "^2.8.6",
+    "@types/karma": "^1.7.3",
+    "@types/react": "^16.3.13",
     "@types/react-autosuggest": "^8.0.2",
-    "@types/react-dom": "^15.5.3",
+    "@types/react-dom": "^16.0.5",
     "@types/webdriverio": "^4.8.8",
     "check-dependencies": "^1.0.1",
     "copy-webpack-plugin": "^4.4.1",
@@ -61,25 +61,24 @@
     "grunt-webpack": "^3.0.2",
     "istanbul": "^0.4.3",
     "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine": "^2.7.0",
+    "jasmine": "^2.8.0",
     "json-loader": "^0.5.4",
-    "karma": "^1.7.0",
+    "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.9",
-    "mendix-client": "^7.6.5",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.0",
+    "mendix-client": "^7.13.4",
     "mendix-widget-build-script": "^1.0.0-beta3",
     "node-sass": "^4.7.2",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
-    "react": "^15.6.1",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-test-renderer": "^15.6.1",
     "remap-istanbul": "^0.9.0",
     "sass-loader": "^6.0.3",
