--- a/package.json
+++ b/package.json
@@ -35,32 +35,33 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
-    "@types/core-js": "^0.9.42",
+    "@types/core-js": "^0.9.46",
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jasmine": "^2.8.6",
     "@types/karma": "^1.7.3",
     "@types/react": "^16.3.13",
     "@types/react-autosuggest": "^8.0.2",
-    "@types/react-dom": "^16.0.5",
-    "@types/webdriverio": "^4.8.8",
-    "check-dependencies": "^1.0.1",
-    "copy-webpack-plugin": "^4.4.1",
-    "core-js": "^2.5.0",
-    "css-loader": "^0.28.2",
-    "enzyme": "^2.9.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "@types/react-dom": "^16.0.6",
+    "@types/webdriverio": "^4.10.1",
+    "check-dependencies": "^1.1.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "core-js": "^2.5.5",
+    "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "grunt": "^1.0.2",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.1",
     "grunt-file-append": "0.0.7",
     "grunt-newer": "^1.3.0",
-    "grunt-webpack": "^3.0.2",
+    "grunt-webpack": "^3.1.1",
     "istanbul": "^0.4.3",
-    "istanbul-instrumenter-loader": "^3.0.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^2.8.0",
     "json-loader": "^0.5.4",
     "karma": "^2.0.2",
@@ -72,34 +73,37 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.0",
-    "mendix-client": "^7.13.4",
-    "mendix-widget-build-script": "^1.0.0-beta3",
-    "node-sass": "^4.7.2",
+    "mendix-client": "^7.13.2",
+    "mendix-widget-build-script": "^1.0.0",
+    "node-sass": "^4.9.0",
+    "nodemon": "^1.17.3",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-test-renderer": "^15.6.1",
-    "remap-istanbul": "^0.9.0",
-    "sass-loader": "^6.0.3",
+    "react-autosuggest": "^9.3.4",
+    "react-dom": "^16.4.1",
+    "react-test-renderer": "^16.3.2",
+    "remap-istanbul": "^0.11.1",
+    "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.18.2",
-    "ts-loader": "^2.2.2",
-    "tslint": "^5.8.0",
-    "tslint-eslint-rules": "^4.1.0",
-    "typescript": "^2.4.2",
-    "wdio-dot-reporter": "0.0.8",
+    "style-loader": "^0.21.0",
+    "ts-loader": "^4.2.0",
+    "tslint": "^5.9.1",
+    "tslint-eslint-rules": "^5.1.0",
+    "typescript": "^2.8.3",
+    "url-loader": "^1.0.1",
+    "wdio-dot-reporter": "0.0.9",
     "wdio-jasmine-framework": "^0.3.2",
-    "wdio-selenium-standalone-service": "0.0.9",
-    "wdio-spec-reporter": "^0.1.1",
-    "webdriverio": "^4.10.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "wdio-selenium-standalone-service": "0.0.10",
+    "wdio-spec-reporter": "^0.1.4",
+    "webdriverio": "^4.12.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "react-autosuggest": "^9.3.3",
+    "classnames": "^2.2.6",
     "react-tagsinput": "^3.19.0"
   }
 }
